add in provider rating

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.yml
@@ -13,3 +13,4 @@ provider:
     focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
     location: "Pottstown, PA"
     language: "English"
+    rating: '4.2'
