--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.profile.field_medical_specialties_ref
     - field.field.node.profile.field_profile_board_certified
     - field.field.node.profile.field_profile_education
+    - field.field.node.profile.field_profile_epic_id
     - field.field.node.profile.field_profile_first_name
     - field.field.node.profile.field_profile_gender
     - field.field.node.profile.field_profile_image
@@ -94,6 +95,14 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
+  field_profile_epic_id:
+    weight: 21
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_profile_image:
     type: media_thumbnail
