--- a/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
@@ -92,6 +92,20 @@ process:
     -
       plugin: default_value
       default_value: tower_health_employed
+  field_profile_scheduling:
+    -
+      plugin: static_map
+      source: open_scheduling
+      map:
+        'n': false
+        'N': false
+        '': false
+        'Y': true
+        'y': true
+    -
+      plugin: default_value
+      default_value: false
+  field_profile_epic_id: epic_id
   type:
     plugin: default_value
     default_value: profile
