--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
@@ -51,11 +51,20 @@ source:
 process:
   field_profile_practid: practioner_id
 
-  field_profile_first_name: first_name
+  field_profile_first_name:
+   - plugin: get
+     source: first_name
+   - plugin: towerhealth_utf_8
 
-  field_profile_last_name: last_name
+  field_profile_last_name:
+  - plugin: get
+    source: last_name
+  - plugin: towerhealth_utf_8
 
-  field_profile_middle_name: middle_name
+  field_profile_middle_name:
+  - plugin: get
+    source: middle_name
+  - plugin: towerhealth_utf_8
 
   field_profile_gender:
     - plugin: static_map
@@ -68,7 +77,10 @@ process:
 
   field_profile_npi: npi_id
 
-  field_profile_professional_title: professional_title
+  field_profile_professional_title:
+  - plugin: get
+    source: professional_title
+  - plugin: towerhealth_utf_8
 
   field_profile_type:
     - plugin: static_map
