--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.yml
@@ -53,7 +53,7 @@ form_sections:
         type: date
       -
         width: oneThird
-        title: 'I am requesting an Appointment for:'
+        title: 'I am requesting an appointment for:'
         type: radio
         orientation: inline
         children:
@@ -87,7 +87,7 @@ form_sections:
         children:
           - title: Phone
             id: contact
-          - title: E-Mail
+          - title: Email
             id: contact
           - title: No Preference
             id: contact
@@ -115,25 +115,6 @@ form_sections:
           - title: Pediatrics
       -
         width: full
-        title: 'Preferred Appointment Times'
-        type: checkbox
-        orientation: inline
-        id: time
-        children:
-          - title: 7-9 a.m.
-            id: time
-          - title: 9-11 a.m.
-            id: time
-          - title: 11 a.m. - 1 p.m.
-            id: time
-          - title: 1 - 3 p.m.
-            id: time
-          - title: 3 - 5 p.m.
-            id: time
-          - title: 5 - 7 p.m.
-            id: time
-      -
-        width: full
         title: 'Preferred Appointment Days'
         info: 'In case your preferred date is unavailable, help us understand other dates that you may be available.'
         info_id: day_info
@@ -152,8 +133,6 @@ form_sections:
           - title: Friday
             id: day
           - title: Saturday
-            id: day
-          - title: Sunday
             id: day
 
 button:
