--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -79,11 +79,10 @@ content:
     weight: 8
     label: hidden
     settings:
-      day_format: long
-      time_format: G
-      compress: false
-      grouped: false
       show_closed: all
+      office_hours_first_day: ''
+      day_format: long
+      time_format: g
       closed_format: Closed
       separator:
         days: '<br />'
@@ -95,10 +94,11 @@ content:
         position: ''
         open_text: 'Currently open!'
         closed_text: 'Currently closed'
+      compress: false
+      grouped: false
       schema:
-        enabled: false
+        enabled: 0
       timezone_field: ''
-      office_hours_first_day: ''
     third_party_settings: {  }
     type: office_hours
     region: content
