--- a/config/sites/default/migrate_plus.migration.towerhealth_location_hours.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_location_hours.yml
@@ -1,24 +1,20 @@
-# @file
-# Contains migration configuration for the TowerHealth provider languages.
----
-id: towerhealth_location_hours
-label: Import tower health location hours.
-migration_groups:
-  - TowerHealth MSOW import
-
+uuid: 6dd18000-fb4a-4045-ad5b-5bf7e0fdb21f
+langcode: en
+status: true
 dependencies:
   enforced:
     module:
       - towerhealth_msow_migration
-
+id: towerhealth_location_hours
+class: null
+field_plugin_method: null
+cck_plugin_method: null
+migration_tags: null
+migration_group: null
+label: 'Import tower health location hours.'
 source:
-  plugin: 'location_hours'
-  # Full path to the file.
+  plugin: location_hours
   path: 'public://directory/Find_Provider_Dir_OfficeHours.txt'
-
-destination:
-  plugin: 'entity:node'
-
 process:
   nid:
     -
@@ -38,7 +34,6 @@ process:
       index:
         - 0
         - value
-
   title:
     -
       plugin: get
@@ -52,7 +47,10 @@ process:
       index:
         - 0
         - value
-
   field_location_hours:
-  - plugin: towerhealth_office_hours
-    source: hours
+    -
+      plugin: towerhealth_office_hours
+      source: hours
+destination:
+  plugin: 'entity:node'
+migration_dependencies: null
