--- a/config/sites/default/core.entity_view_display.node.page.default.yml
+++ b/config/sites/default/core.entity_view_display.node.page.default.yml
@@ -3,11 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.page.field_basic_components
     - field.field.node.page.field_media
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
     - node.type.page
   module:
+    - entity_reference_revisions
     - text
     - user
 _core:
@@ -22,6 +24,15 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_basic_components:
+    type: entity_reference_revisions_entity_view
+    weight: 5
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_media:
     type: entity_reference_entity_view
     weight: 2
