TH-111 add table to wysiwyg

--- a/config/sites/default/editor.editor.basic_html.yml
+++ b/config/sites/default/editor.editor.basic_html.yml
@@ -35,6 +35,7 @@ settings:
             - Blockquote
             - DrupalImage
             - media_entity_embed
+            - Table
         -
           name: 'Block Formatting'
           items:
