--- a/config/sites/default/editor.editor.full_html.yml
+++ b/config/sites/default/editor.editor.full_html.yml
@@ -38,7 +38,6 @@ settings:
           name: Media
           items:
             - Blockquote
-            - DrupalImage
             - media_entity_embed
             - Table
             - HorizontalRule
@@ -46,6 +45,7 @@ settings:
           name: 'Block Formatting'
           items:
             - Format
+            - Styles
         -
           name: Tools
           items:
@@ -53,7 +53,7 @@ settings:
             - Source
   plugins:
     stylescombo:
-      styles: ''
+      styles: "blockquote.blockquote--left|Blockquote left aligned\r\nblockquote.blockquote--right|Blockquote right aligned"
     language:
       language_list: un
 image_upload:
