--- a/config/sites/default/user.role.article_editor.yml
+++ b/config/sites/default/user.role.article_editor.yml
@@ -7,4 +7,29 @@ label: 'Article Editor'
 weight: -8
 is_admin: null
 permissions:
+  - 'access contextual links'
+  - 'access in-place editing'
+  - 'access media_entity_browser entity browser pages'
+  - 'access media_entity_browser_media_library entity browser pages'
+  - 'access media_entity_browser_modal entity browser pages'
   - 'access toolbar'
+  - 'administer entity browsers'
+  - 'create image media'
+  - 'create media'
+  - 'create remote_video media'
+  - 'create video media'
+  - 'delete own image media'
+  - 'delete own remote_video media'
+  - 'delete own video media'
+  - 'edit own image media'
+  - 'edit own remote_video media'
+  - 'edit own video media'
+  - 'update media'
+  - 'use default transition back_to_draft'
+  - 'use default transition create_new_draft'
+  - 'use default transition needs_review'
+  - 'use default transition publish'
+  - 'view all media revisions'
+  - 'view any unpublished content'
+  - 'view latest version'
+  - 'view own unpublished media'
