--- a/config/sites/default/user.role.editor.yml
+++ b/config/sites/default/user.role.editor.yml
@@ -3,27 +3,48 @@ langcode: en
 status: true
 dependencies: {  }
 id: editor
-label: Editor
+label: 'Editor w/o Publisher rights'
 weight: -7
 is_admin: null
 permissions:
   - 'access administration pages'
   - 'access content overview'
+  - 'access contextual links'
+  - 'access in-place editing'
+  - 'access media_entity_browser entity browser pages'
+  - 'access media_entity_browser_media_library entity browser pages'
+  - 'access media_entity_browser_modal entity browser pages'
   - 'access toolbar'
   - 'access workbench'
+  - 'administer entity browsers'
+  - 'create image media'
+  - 'create media'
   - 'create page content'
+  - 'create remote_video media'
+  - 'create video media'
+  - 'delete own image media'
   - 'delete own page content'
+  - 'delete own remote_video media'
+  - 'delete own video media'
   - 'delete page revisions'
   - 'edit any page content'
+  - 'edit own image media'
   - 'edit own page content'
+  - 'edit own remote_video media'
+  - 'edit own video media'
   - 'revert page revisions'
+  - 'update media'
   - 'use default transition back_to_draft'
   - 'use default transition create_new_draft'
   - 'use default transition needs_review'
+  - 'use text format full_html'
   - 'use workbench access'
   - 'use workbench_tabs'
+  - 'view all media revisions'
   - 'view any unpublished content'
   - 'view latest version'
   - 'view own unpublished content'
+  - 'view own unpublished media'
   - 'view page revisions'
   - 'view the administration theme'
+  - 'view unpublished paragraphs'
