Added drupal_menu_extras with patch, added social media menu.

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/media_entity_browser": "^2.0",
         "drupal/menu_block": "^1.5",
+        "drupal/menu_item_extras": "^2.8",
         "drupal/metatag": "^1.10",
         "drupal/migrate_devel": "^1.2@beta",
         "drupal/migrate_plus": "^4.2",
@@ -122,6 +123,9 @@
             },
             "drupal/node_title_help_text": {
                 "node_title_help_text_inline_entity_form_entity_form_alter loads NodeType even when not referencing nodes (https://www.drupal.org/project/node_title_help_text/issues/307031)": "https://www.drupal.org/files/issues/2019-07-25/ief-only-nodes.patch"
+            },
+            "drupal/menu_item_extras": {
+                "MenuItemExtrasCommands breaks drush 8.x (https://www.drupal.org/project/menu_item_extras/issues/3090785)": "https://www.drupal.org/files/issues/2019-11-13/3090785-15.patch"
             }
         }
     }
