--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/article-teaser/article-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/article-teaser/article-teaser.yml
@@ -1,12 +1,8 @@
 article:
   details:
     title: "Lessons from the Oncology Center"
-    author: "John Doe"
+    date: "December 6, 2019"
     tags:
       - Oncology
       - Patient Stories
-    text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices..."
-  link:
-    url: "/"
-    text: "Read More"
-    icon: "th-find-hospital.svg"
+    text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit leo vitae nunc volutpat tristique at et lorem. Pellentesque non consectetur tellus, quis rhoncus odio. Duis consequat sem ac accumsan dictum. Aliquam rutrum non nibh vel commodo. Cras eleifend dapibus ultrices...."
