Almost "eureka" moment on the pattern lab side, Drupal linking is coming next.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.yml
@@ -1,7 +1,10 @@
 items:
   - title: "Facebook"
     url: "/"
-    field_social_icon: "field_social_icon"
+    field_social_icon: "social-facebook.svg"
   - title: "Twitter"
     url: "/"
-    field_social_icon: "field_social_icon"
+    field_social_icon: "social-twitter.svg"
+  - title: "Instagram"
+    url: "/"
+    field_social_icon: "social-instagram.svg"
