add in a modal library and create a modal molecule

--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -50,3 +50,8 @@ tabs:
 toggle-tips:
   js:
     dist/02-molecules/toggle-tip/toggle-tip.js: {}
+    
+modal:
+  js:
+    components/js/modaal.js: {}
+    dist/02-molecules/modal/modal.js: {}
