--- a/config/sites/default/user.role.article_editor.yml
+++ b/config/sites/default/user.role.article_editor.yml
@@ -14,13 +14,19 @@ permissions:
   - 'access media_entity_browser_modal entity browser pages'
   - 'access toolbar'
   - 'administer entity browsers'
+  - 'create article content'
   - 'create image media'
   - 'create media'
   - 'create remote_video media'
   - 'create video media'
+  - 'delete any article content'
+  - 'delete article revisions'
+  - 'delete own article content'
   - 'delete own image media'
   - 'delete own remote_video media'
   - 'delete own video media'
+  - 'edit any article content'
+  - 'edit own article content'
   - 'edit own image media'
   - 'edit own remote_video media'
   - 'edit own video media'
@@ -30,6 +36,7 @@ permissions:
   - 'use default transition needs_review'
   - 'use default transition publish'
   - 'view all media revisions'
-  - 'view any unpublished content'
+  - 'view article revisions'
   - 'view latest version'
+  - 'view own unpublished content'
   - 'view own unpublished media'
