TH-321 switch to small icon button

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.yml
@@ -2,11 +2,11 @@ provider:
   img:
     src: "../../images/people/Roland-Donald.jpg"
     alt: "Alternative Text"
-  classes: "growth bottom-right"
   link:
     url: "/"
     text: "Request an Appointment"
     icon: "th-cal.svg"
+    variation: "small"
   details:
     name: "Donald E. Roland, MD, DMD"
     specialties: "Oral and Maxillofacial Surgery"
