--- a/config/sites/default/core.entity_view_display.menu_link_content.main.default.yml
+++ b/config/sites/default/core.entity_view_display.menu_link_content.main.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.menu_link_content.main.field_main_autocomplete_form
+    - field.field.menu_link_content.main.field_main_label
     - field.field.menu_link_content.main.field_main_link_type
     - system.menu.main
   module:
@@ -24,6 +25,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_key
+    region: content
+  field_main_label:
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_main_link_type:
     weight: 2
