field group for menu fields

--- a/config/sites/default/core.entity_form_display.menu_link_content.main.default.yml
+++ b/config/sites/default/core.entity_form_display.menu_link_content.main.default.yml
@@ -8,21 +8,38 @@ dependencies:
     - field.field.menu_link_content.main.field_main_link_type
     - system.menu.main
   module:
+    - field_group
     - link
     - menu_item_extras
+third_party_settings:
+  field_group:
+    group_main_alternative_elements:
+      children:
+        - field_main_label
+        - field_main_autocomplete_form
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: 'Select an autocomplete form or label to display in place of a menu link. Add "route:<nolink>" for the link. '
+        required_fields: true
+      label: 'Alternative Elements'
+      region: content
 id: menu_link_content.main.default
 targetEntityType: menu_link_content
 bundle: main
 mode: default
 content:
   field_main_autocomplete_form:
-    weight: 2
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_main_label:
-    weight: 21
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -45,7 +62,7 @@ content:
     third_party_settings: {  }
   view_mode:
     type: menu_item_extras_view_mode_selector_select
-    weight: 3
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
