--- a/config/sites/default/user.role.editor.yml
+++ b/config/sites/default/user.role.editor.yml
@@ -17,12 +17,10 @@ permissions:
   - 'access toolbar'
   - 'access workbench'
   - 'administer entity browsers'
-  - 'create article content'
   - 'create image media'
   - 'create media'
   - 'create page content'
   - 'create remote_video media'
-  - 'create service content'
   - 'create video media'
   - 'delete own image media'
   - 'delete own remote_video media'
@@ -31,9 +29,7 @@ permissions:
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own remote_video media'
-  - 'edit own service content'
   - 'edit own video media'
-  - 'revert page revisions'
   - 'update media'
   - 'use default transition back_to_draft'
   - 'use default transition create_new_draft'
@@ -42,6 +38,7 @@ permissions:
   - 'use workbench access'
   - 'use workbench_tabs'
   - 'view all media revisions'
+  - 'view any unpublished content'
   - 'view latest version'
   - 'view own unpublished content'
   - 'view own unpublished media'
