--- a/config/sites/default/user.role.publisher.yml
+++ b/config/sites/default/user.role.publisher.yml
@@ -20,43 +20,37 @@ permissions:
   - 'access toolbar'
   - 'access workbench'
   - 'administer entity browsers'
-  - 'administer workbench menu access'
-  - 'bypass node access'
-  - 'create article content'
+  - 'administer menu'
   - 'create image media'
   - 'create media'
   - 'create page content'
   - 'create remote_video media'
-  - 'create service content'
   - 'create terms in areas_of_care'
   - 'create terms in program_type'
   - 'create terms in region'
   - 'create video media'
-  - 'delete any article content'
   - 'delete any image media'
   - 'delete any media'
+  - 'delete any page content'
   - 'delete any remote_video media'
   - 'delete any video media'
-  - 'delete article revisions'
   - 'delete media'
-  - 'delete own article content'
   - 'delete own image media'
+  - 'delete own page content'
   - 'delete own remote_video media'
   - 'delete own video media'
+  - 'delete page revisions'
+  - 'delete service revisions'
   - 'delete terms in areas_of_care'
   - 'delete terms in program_type'
   - 'delete terms in region'
-  - 'edit any article content'
   - 'edit any image media'
   - 'edit any page content'
   - 'edit any remote_video media'
-  - 'edit any service content'
   - 'edit any video media'
-  - 'edit own article content'
   - 'edit own image media'
   - 'edit own page content'
   - 'edit own remote_video media'
-  - 'edit own service content'
   - 'edit own video media'
   - 'edit terms in areas_of_care'
   - 'edit terms in program_type'
@@ -80,7 +74,6 @@ permissions:
   - 'view all media revisions'
   - 'view all revisions'
   - 'view any unpublished content'
-  - 'view article revisions'
   - 'view latest version'
   - 'view own unpublished content'
   - 'view own unpublished media'
