Fix article editor.

--- a/config/sites/default/user.role.article_editor.yml
+++ b/config/sites/default/user.role.article_editor.yml
@@ -7,12 +7,15 @@ label: 'Article Editor'
 weight: -8
 is_admin: null
 permissions:
+  - 'access administration pages'
+  - 'access content overview'
   - 'access contextual links'
   - 'access in-place editing'
   - 'access media_entity_browser entity browser pages'
   - 'access media_entity_browser_media_library entity browser pages'
   - 'access media_entity_browser_modal entity browser pages'
   - 'access toolbar'
+  - 'access workbench'
   - 'administer entity browsers'
   - 'create article content'
   - 'create image media'
@@ -35,8 +38,10 @@ permissions:
   - 'use default transition create_new_draft'
   - 'use default transition needs_review'
   - 'use default transition publish'
+  - 'use workbench_tabs'
   - 'view all media revisions'
   - 'view article revisions'
   - 'view latest version'
   - 'view own unpublished content'
   - 'view own unpublished media'
+  - 'view the administration theme'
