Added social menu to the footer (need Drupal integration for icons)

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.yml
@@ -5,6 +5,12 @@ items:
   - title: "Twitter"
     url: "/"
     field_social_icon: "social-twitter.svg"
+  - title: "LinkedIn"
+    url: "/"
+    field_social_icon: "social-linkedin.svg"
+  - title: "YouTube"
+    url: "/"
+    field_social_icon: "social-youtube.svg"
   - title: "Instagram"
     url: "/"
     field_social_icon: "social-instagram.svg"
